# DooFit

./: .create_doxygen_and_deploy.sh  .gitignore  .travis.yml  CMakeLists.txt  GetRootVersions  InstallDooSoftwareProject  InstallDooSoftwareProjectSingleDVVersion  LoadDooSoftware  PrintRootVersionForDVVersion  README.md  UpdateDooSoftware  doxygen.conf  id_rsa_doofit.enc  install-all.sh  install.sh  install_version  load.sh
TestWiese/BobTheBuilderTest/: BobTheBuilderTest.cpp  CMakeLists.txt  ConfigSin2b.INFO
TestWiese/BuilderStandardTest/: BuilderStandardTest.cpp  CMakeLists.txt  ConfigSin2b.INFO
TestWiese/ConfigTest/: CMakeLists.txt  ConfigTest.cpp  ConfigTest.h  ConfigTestMain.cpp  ConfigTest_LinkDef.h
TestWiese/FitModelBreweryTest/: CMakeLists.txt  ConfigSin2b.INFO  FitModelBreweryTest.cpp
TestWiese/FitterTest/: CMakeLists.txt  FitterTestMain.cpp  RooMinimizerFcn2.cxx  RooMinimizerFcn2.h
TestWiese/NumerobisTest/: CMakeLists.txt  ExamplePdfConfig.INFO  NumerobisConfig.txt  NumerobisTest.cpp
TestWiese/ToyTest/: CMakeLists.txt  DeltaMToyStudy.cpp  ToyTestBugMain.cpp  ToyTestMain.cpp
Utils/: CMakeLists.txt  MsgStream.cpp  MsgStream.h  Utils.cpp  Utils.h
main/: CMakeLists.txt  ConfigSin2b.INFO  FitterStd.cpp
src/Config/: AbsConfig.cpp  AbsConfig.h  AbsConfig_LinkDef.h  AbsTypeCommaSeparated.h  AbsTypeCommaSeparated_LinkDef.h  CMakeLists.txt  CommaSeparatedPair.cpp  CommaSeparatedPair.h  CommaSeparatedPair_LinkDef.h  CommonConfig.cpp  CommonConfig.h  Config.cpp  Config.h  ConfigAbstractTypeCommaSeparated.cpp  ConfigAbstractTypeCommaSeparated.h  ConfigAbstractTypeCommaSeparated_LinkDef.h  ConfigCstStringVector.cpp  ConfigCstStringVector.h  ConfigCstStringVector_LinkDef.h  Config_LinkDef.h  DiscreteProbabilityDistribution.cpp  DiscreteProbabilityDistribution.h  DiscreteProbabilityDistribution_LinkDef.h
src/Toy/: CMakeLists.txt
src/Toy/ToyFactoryStd/: CMakeLists.txt  ToyFactoryStd.cpp  ToyFactoryStd.h  ToyFactoryStdConfig.cpp  ToyFactoryStdConfig.h
src/Toy/ToyStudyStd/: CMakeLists.txt  ToyStudyStd.cpp  ToyStudyStd.h  ToyStudyStdConfig.cpp  ToyStudyStdConfig.h
src/doofit/Builder/numerobis/: CMakeLists.txt  numerobis.cpp  numerobis.h  numerobis_config.cpp  numerobis_config.h
src/doofit/Config/: AbsConfig.cpp  AbsConfig.h  AbsTypeCommaSeparated.cpp  AbsTypeCommaSeparated.h  CMakeLists.txt  CommaSeparatedList.cpp  CommaSeparatedList.h  CommaSeparatedPair.cpp  CommaSeparatedPair.h  CommonConfig.cpp  CommonConfig.h  ConfigCstStringVector.cpp  ConfigCstStringVector.h  DiscreteProbabilityDistribution.cpp  DiscreteProbabilityDistribution.h
src/doofit/Toy/: CMakeLists.txt
src/doofit/Toy/ToyFactoryStd/: ToyFactoryStd.cpp  ToyFactoryStd.h  ToyFactoryStdConfig.cpp  ToyFactoryStdConfig.h
src/doofit/Toy/ToyStudyStd/: ToyStudyStd.cpp  (+3 more)
src/doofit/analysis/: CMakeLists.txt
src/doofit/builder/: CMakeLists.txt
src/doofit/extraroopdfs/: CMakeLists.txt  DecRateCoeff.cxx  DecRateCoeff.h  DecRateCoeff_LinkDef.h  RooAbsEffResModel.cxx  RooAbsEffResModel.h  RooAbsEffResModel_LinkDef.h  RooAbsGaussModelEfficiency.cxx  RooAbsGaussModelEfficiency.h  RooAbsGaussModelEfficiency_LinkDef.h  RooBCPGenDecayUt.cxx  RooBCPGenDecayUt.h  RooBMixAsymDecay.cpp  RooBMixAsymDecay.h  RooBMixAsymDecay_LinkDef.h  RooBinned1DQuinticBase.cxx  RooBinned1DQuinticBase.h  RooBinned2DBicubicBase.cxx  RooBinned2DBicubicBase.h  RooBinnedPdf.cxx  RooBinnedPdf.h  RooBinnedPdf_LinkDef.h  RooCruijff.cxx  RooCruijff.h  RooCubicSplineFun.cxx  RooCubicSplineFun.h  RooCubicSplineFun_LinkDef.h  RooCubicSplineKnot.cxx  RooCubicSplineKnot.h  RooCubicSplineKnot_LinkDef.h  RooEffConvGenContext.cxx  RooEffConvGenContext.h  RooEffConvGenContext_LinkDef.h  RooEffHistProd.cxx  RooEffHistProd.h  RooEffResModel.cxx  RooEffResModel.h  RooEffResModel_LinkDef.h  RooGaussEfficiencyModel.cxx  RooGaussEfficiencyModel.h  (+5 more)
src/doofit/fitter/: AbsFitter.h  CMakeLists.txt
src/doofit/plotting/: CMakeLists.txt
src/doofit/tools/: CMakeLists.txt  tools.h
src/doofit/toy/: CMakeLists.txt
src/doofit/utils/: CMakeLists.txt  FileLock.cpp  FileLock.h  MsgStream.cpp  MsgStream.h  Utils.cpp  Utils.h  utils.cpp  utils.h
src/lhcb/Erasmus/: CMakeLists.txt  RooHILLdini.cxx  RooHILLdini.h  RooHORNSdini.cxx  RooHORNSdini.h
src/lhcb/P2VV/: CMakeLists.txt  Functions.cxx  MultiHistEntry.h  RooAbsEffResModel.h  RooAbsGaussModelEfficiency.cxx  RooAbsGaussModelEfficiency.h  RooAmoroso.h  RooAvEffConstraint.cxx  RooAvEffConstraint.h  RooBTagDecay.h  RooBinnedFun.cxx  RooBinnedPdf.cxx  RooCalibratedDilution.cxx  RooCategoryVar.cxx  RooComplementCoef.cxx  RooConvertPolAmp.cxx  RooConvertPolAmp.h  RooCruijff.cxx  RooCruijff.h  RooCubicSplineFun.cxx  RooCubicSplineFun.h  RooCubicSplineKnot.cxx  RooCubicSplineKnot.h  RooEffConvGenContext.cxx  RooEffConvGenContext.h  RooEffResAddModel.cxx  RooEffResAddModel.h  RooEffResModel.cxx  RooEffResModel.h  RooExplicitNormPdf.cxx  RooExplicitNormPdf.h  RooGaussEfficiencyModel.cxx  RooGaussEfficiencyModel.h  RooGaussEfficiencyModel_LinkDef.h  RooMultiEffResModel.cxx  RooP2VVAngleBasis.h  RooRealCategory.cxx  RooRealCategory.h  RooRealMoments.h  RooRelBreitWigner.cxx  (+9 more)
src/lhcb/PrivateSchiller/: CMakeLists.txt  DecRateCoeff.cxx  DecRateCoeff.h  DecRateCoeff_LinkDef.h  SchillerRooAbsEffResModel.cxx  SchillerRooAbsEffResModel.h  SchillerRooAbsEffResModel_LinkDef.h  SchillerRooBinnedPdf.cxx  SchillerRooBinnedPdf.h  SchillerRooBinnedPdf_LinkDef.h  SchillerRooEffConvGenContext.cxx  SchillerRooEffConvGenContext.h  SchillerRooEffConvGenContext_LinkDef.h  SchillerRooEffResModel.cxx  SchillerRooEffResModel.h  SchillerRooEffResModel_LinkDef.h
src/lhcb/Urania/: CMakeLists.txt  DecRateCoeff.cxx  DecRateCoeff.h  DecRateCoeff_Bd.cxx  DecRateCoeff_Bd.h  DecRateCoeff_Bd_LinkDef.h  RooAmorosoPdf.cxx  RooAmorosoPdf.h  RooApollonios.cxx  RooApollonios.h  RooGeneralizedHyperbolic.cxx  RooGeneralizedHyperbolic.h  RooIpatia2.cxx  RooIpatia2_pre20140507.cxx  RooIpatia2_pre20140507.h  RooJohnsonSU.cxx  RooJohnsonSU.h  RooLogGamma.cxx  RooLogGamma.h  RooReparamGHYP.cxx  RooReparamGHYP.h
src/libjson/: CMakeLists.txt  JSONOptions.h
(+855 files in other folders)
