#set(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/lib")
#set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")

#add_library(Utils SHARED FileLock.cpp FileLock.h)
#target_link_libraries(Utils ${ROOT_LIBRARIES} ${ROOFIT_LIBRARIES} ${Boost_LIBRARIES})
#install(TARGETS Utils DESTINATION lib)
#install(FILES FileLock.h DESTINATION include/doofit/utils)
